--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         {
             "name": "yangshihe",
             "email": "yangshihe@qq.com",
-            "homepage": "http://www.noooya.com/"
+            "homepage": "https://github.com/yangshihe"
         }
     ],
     "require": {
@@ -25,7 +25,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.4-dev"
+            "dev-master": "1.0.5-dev"
         }
     }
 }
